--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Image" title="that's my image">
+
 
   <!-- Your code here -->
 
